js file partition

--- a/templates/datatable.html
+++ b/templates/datatable.html
@@ -57,79 +57,5 @@
       </table>
     </div>
   </body>
-  <script>
-
-    function filterNamesBySearch() {
-      var search = document.getElementById('name-search').value.toUpperCase();
-      console.log(search);
-      var elems = document.getElementsByClassName('data-row');
-      for (var i = 0; i < elems.length; i++) {
-        var nameElem = elems[i].getElementsByTagName('td')[0];
-        if (nameElem) {
-          var elemName = nameElem.textContent.toUpperCase();
-          if (elemName.indexOf(search) > -1) {
-            elems[i].style.display = '';
-          }
-          else {
-            elems[i].style.display = 'none';
-          }
-        }
-      }
-    }
-
-    function filterParameters() {
-      var selectTool = document.getElementById('filter-param');
-      var param = selectTool.value;
-      var elems = document.getElementsByClassName('data-row');
-      for (var i = 0; i < elems.length; i++) {
-        var paramElem = elems[i].getElementsByTagName('td')[1];
-        console.log(paramElem);
-        if (paramElem) {
-          var elemParam = paramElem.textContent;
-          if (elemParam == param || param == 'all') {
-            elems[i].style.display = '';
-          }
-          else {
-            elems[i].style.display = 'none';
-          }
-        }
-      }
-    }
-
-
-    function formBubblesFromData(data) {
-      var prepData = [];
-      for (id in data) {
-        sample = data[id];
-        var bubble = {
-          name: sample.location.loc + ": " + sample.params[0],
-          param: sample.params[0],
-          value: sample.values,
-        }
-        prepData.push(bubble);
-      }
-      return prepData;
-    }
-
-    function getDataPoints() {
-      //cleaning json content
-      var data = JSON.parse('{{ jsoncontent | tojson | safe }}');
-      return formBubblesFromData(data);
-    }
-
-    //use Data from flask and that index will be nth-child
-    function getParamFilteredBubbles(prepData, param) {
-      if (param == 'all') {
-        return prepData;
-      }
-      var newData = [];
-      for (id in prepData) {
-        var sample = prepData[id];
-        if (sample.param === param) {
-          newData.push(sample);
-        }
-      }
-      return newData;
-    }
-  </script>
+  <script type='text/javascript' src='../static/js/tabletools.js'></script>
 </html>
