--- a/static/css/datatable.css
+++ b/static/css/datatable.css
@@ -27,8 +27,8 @@ html, body {
 }
 
 #cont {
-  width: 75%;
-  min-width: 500px;
+  width: 70%;
+  min-width: 910px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -37,6 +37,7 @@ html, body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   height: 100px;
 }
 
@@ -58,10 +59,39 @@ html, body {
   padding-right: 5px;
 }
 
+#latitude, #longitude {
+  border: 1px solid white;
+}
+
+#latitude span, #longitude span {
+  color: white;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-family: 'Arial';
+  font-size: 13px;
+}
+
+#latitude-low, #latitude-high, #longitude-low, #longitude-high {
+  width: 45px;
+  border: none;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+}
+
+#latitude button, #longitude button {
+  width: 30px;
+  color: white;
+  background-color: black;
+  border: none;
+}
+
 
 #data-table {
   border-radius: 5px;
   backgrond-color: blue;
+  width: 100%;
   color: white;
 }
 
