--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,6 +10,11 @@ canvas {
   position: absolute;
 }
 
+#map-container {
+  width: 100%;
+  height: 400px;
+}
+
 #toolbar {
   margin-left: auto;
   margin-right: auto;
@@ -18,6 +23,7 @@ canvas {
   align-items: center;
   width: 60%;
   height: 50px;
+  margin-bottom: -50px;
 }
 
 .button {
@@ -50,6 +56,9 @@ canvas {
   background-color: #202020;
 }
 
-#canv {
-  position: absolute;
+#map {
+  width: 90%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
